# hacs-open-inverter-gateway

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
custom_components/openinverter/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
tests/: test_coordinator.py
